<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Solword</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_show_errors">Show input errors</string>
    <string name="dialog_title_errors">Input errors</string>
    <string name="button_title_ok">OK</string>

    <string name="menu_title_enable_vibration">Enable vibration</string>
    <string name="menu_title_disable_vibration">Disable vibration</string>
    <string name="title_select_dictionary">Select dictionary</string>
    
    
    
    <string name="pref_key_word_size">pref_key_word_size</string>
    <string name="pref_summ_word_size">Select how many alphabets should be in a word</string>
    <string name="pref_title_word_size">Word size</string>
    <string name="pref_key_dictionary">pref_key_dictionary</string>
    <string name="pref_summ_dictionary">Select dictionary for getting definition of the guesses</string>
    <string name="pref_title_dictionary">Select dictionary</string>
    <string name="pref_key_vibration">pref_key_vibration</string>
    <string name="pref_title_vibration">Vibration</string>
    <string name="pref_summ_off_vibration">Vibration is disabled</string>
    <string name="pref_summ_on_vibration">Vibration is enabled</string>

<!--    <string name="key_word_size_5">word_size_5</string>-->
<!--    <string name="key_word_size_6">word_size_6</string>-->
<!--    <string name="key_word_size_7">word_size_7</string>-->
<!--    <string name="key_word_size_8">word_size_8</string>-->
<!--    <string name="key_word_size_9">word_size_9</string>-->

    <string name="value_word_size_4">4</string>
    <string name="value_word_size_5">5</string>
    <string name="value_word_size_6">6</string>
    <string name="value_word_size_7">7</string>
    <string name="value_word_size_8">8</string>
    <string name="value_word_size_9">9</string>
    <string name="value_word_size_10">10</string>
    <string name="value_word_size_11">11</string>
    <string name="value_word_size_12">12</string>
    <string name="value_word_size_13">13</string>
    <string name="value_word_size_14">14</string>

<!--    <array name="word_size_keys">-->
<!--        <item>@string/key_word_size_5</item>-->
<!--        <item>@string/key_word_size_6</item>-->
<!--        <item>@string/key_word_size_7</item>-->
<!--        <item>@string/key_word_size_8</item>-->
<!--        <item>@string/key_word_size_9</item>-->
<!--    </array>-->
    <array name="word_size_values">
        <item>@string/value_word_size_4</item>
        <item>@string/value_word_size_5</item>
        <item>@string/value_word_size_6</item>
        <item>@string/value_word_size_7</item>
        <item>@string/value_word_size_8</item>
        <item>@string/value_word_size_9</item>
        <item>@string/value_word_size_10</item>
<!--        <item>@string/value_word_size_11</item>-->
<!--        <item>@string/value_word_size_12</item>-->
<!--        <item>@string/value_word_size_13</item>-->
<!--        <item>@string/value_word_size_14</item>-->
    </array>



    <string name="key_dictionary_wiktionary">1</string>
    <string name="key_dictionary_free_dictionary">2</string>
    <string name="key_dictionary_oxford">3</string>
    <string name="key_dictionary_dictionary">4</string>
    <string name="key_dictionary_collins">5</string>
    <string name="key_dictionary_merriam">6</string>
    <string name="key_dictionary_cambridge">7</string>
    <string name="key_dictionary_google">8</string>

    <string name="value_dictionary_oxford">Oxford Learner\'s Dictionary</string>
    <string name="value_dictionary_dictionary">Dictionary.com</string>
    <string name="value_dictionary_collins">Collins</string>
    <string name="value_dictionary_merriam">Merriam-Webster</string>
    <string name="value_dictionary_cambridge">Cambridge</string>
    <string name="value_dictionary_free_dictionary">The Free Dictionary</string>
    <string name="value_dictionary_wiktionary">Wiktionary</string>
    <string name="value_dictionary_google">Google Search</string>

    <string name="url_dictionary_oxford">https://www.oxfordlearnersdictionaries.com/definition/english/%s</string>
    <string name="url_dictionary_dictionary">https://www.dictionary.com/browse/%s</string>
    <string name="url_dictionary_collins">https://www.collinsdictionary.com/dictionary/english/%s</string>
    <string name="url_dictionary_merriam">https://www.merriam-webster.com/dictionary/%s</string>
    <string name="url_dictionary_cambridge">https://dictionary.cambridge.org/dictionary/english/%s</string>
    <string name="url_dictionary_free_dictionary">https://www.thefreedictionary.com/%s</string>
    <string name="url_dictionary_wiktionary">https://en.wiktionary.org/wiki/%s</string>
    <string name="url_dictionary_google">https://www.google.com/search?q=%s+meaning</string>

    <string name="dev_by">APPICACIOUS</string>
    <string name="sqlite_and">AND</string>
    <string name="sqlite_or">OR</string>
    <string name="label_word_size">%d letter words</string>

    <string name="label_free">Your app supports ads!</string>
    <string name="label_purchased">Premium version is unlocked!</string>
    <string name="label_get_premium_version">Get premium version</string>
    <string name="subtitle_premium">Premium</string>
    <string name="email_text">appicacious@gmail.com</string>
    <string name="twitter_handle">\@appicacious</string>
    <string name="title_about">About</string>
    <string name="text_privacy">Privacy policy</string>
    <string name="text_terms">Terms &amp; conditions</string>




    <string name="text_premium">
        <p>&amp;#10004  No advertisements</p>
        <p>&amp;#10004  No hidden guesses</p>
        <p>&amp;#10004 No internet required &amp;#42</p>
        <p>&amp;#42 Internet is required for app updates, however!</p>
    </string>
    <string name="menu_title_help">Help</string>
    <string name="menu_title_rate_app">Rate app</string>
    <string name="menu_title_share_app">Share app</string>
    <string name="one_liner">Stuck in Wordle?\nSolword is here to help!</string>

    <array name="dictionary_keys">
        <item>@string/key_dictionary_wiktionary</item>
        <item>@string/key_dictionary_free_dictionary</item>
        <item>@string/key_dictionary_oxford</item>
        <item>@string/key_dictionary_dictionary</item>
        <item>@string/key_dictionary_collins</item>
        <item>@string/key_dictionary_merriam</item>
        <item>@string/key_dictionary_cambridge</item>
        <item>@string/key_dictionary_google</item>
    </array>
    <array name="dictionary_values">
        <item>@string/value_dictionary_wiktionary</item>
        <item>@string/value_dictionary_free_dictionary</item>
        <item>@string/value_dictionary_oxford</item>
        <item>@string/value_dictionary_dictionary</item>
        <item>@string/value_dictionary_collins</item>
        <item>@string/value_dictionary_merriam</item>
        <item>@string/value_dictionary_cambridge</item>
        <item>@string/value_dictionary_google</item>
    </array>
    <array name="dictionary_url">
        <item>@string/url_dictionary_wiktionary</item>
        <item>@string/url_dictionary_free_dictionary</item>
        <item>@string/url_dictionary_oxford</item>
        <item>@string/url_dictionary_dictionary</item>
        <item>@string/url_dictionary_collins</item>
        <item>@string/url_dictionary_merriam</item>
        <item>@string/url_dictionary_cambridge</item>
        <item>@string/url_dictionary_google</item>
    </array>

    
    
    
    
</resources>