<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_get_premium"
        android:title="@string/label_get_premium_version"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_consume"
        android:title="Consume"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/menu_error_log"
        android:title="@string/menu_title_show_errors"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_title_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_rate_app"
        android:title="@string/menu_title_rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share_app"
        android:title="@string/menu_title_share_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_title_help"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_about"
        android:title="@string/title_about"
        app:showAsAction="never"
        />

</menu>