<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_parent_container"
    tools:context=".fragments.SplashFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_splash_background"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_about_app_icon"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="64dp"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@drawable/playstore" />

        <TextView
            android:id="@+id/tv_about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_about_app_icon" />

        <TextView
            android:id="@+id/tv_about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_app_name"
            tools:text="App version #" />

        <TextView
            android:id="@+id/tv_one_liner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="@string/one_liner"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/tv_dev_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about_app_version"
            app:layout_constraintVertical_bias="0.3" />


        <TextView
            android:id="@+id/tv_dev_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poiret_one"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/dev_by"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_consent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/open_sans"
            android:lineSpacingMultiplier="1.1"
            android:paddingHorizontal="16dp"
            android:textSize="15sp"
            tools:text="Before proceeding further, please read and accept the Privacy policy and Terms &amp; conditions."
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@id/bt_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_accept"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:fontFamily="@font/open_sans"
            android:text="accept"
            android:textStyle="bold"
            android:textColor="?colorSecondaryVariant"
            app:cornerRadius="4dp"
            app:strokeWidth="0.7dp"
            app:strokeColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_leave" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_leave"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans"
            android:text="leave"
            android:textStyle="bold"
            android:textColor="?colorSecondaryVariant"
            app:cornerRadius="4dp"
            app:strokeWidth="0.7dp"
            app:strokeColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="@id/bt_accept"
            app:layout_constraintEnd_toStartOf="@id/bt_accept"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/consent_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="bt_accept, bt_leave, tv_consent"
            tools:visibility="gone" />

<!--        <androidx.constraintlayout.widget.Group-->
<!--            android:id="@+id/app_group"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="visible"-->
<!--            app:constraint_referenced_ids="tv_dev_info, tv_about_app_version"-->
<!--            tools:visibility="visible" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>